Fix display text alignment, remove script comments

--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,10 @@
 
 .display {
     display: flex;
+    justify-content: flex-end;
     align-items: center;
     box-sizing: border-box;
-    text-align: right;
-    padding: 0 10px;
+    padding: 0 25px;
     font-size: 100px;
     width: calc(100% - 30px);
     margin: 10px;
